<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".spendings.AddSpendingActivity"
    android:id="@+id/add_spending_layout">

    <EditText
        android:id="@+id/add_spending_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/add_spending_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/add_spending_title"
        />

    <ImageView
        android:id="@+id/add_spending_value_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_attach_money"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/add_spending_value"
        app:layout_constraintBottom_toBottomOf="@id/add_spending_value"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/add_spending_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/value"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@id/add_spending_value_symbol"
        app:layout_constraintTop_toBottomOf="@id/add_spending_description"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>